# perfect-cmaps

./: CITATION.cff  MANIFEST.in  README.md  cielab_cmap.py  color_utils.py  colormap_inspector.ipynb  colormaps.py  create_cielab_gamut.py  create_custom_cmap.py  customize_cmap.py  iterate_create_custom_cmap.py  optimization.py  pyproject.toml  requirements.txt  setup.py
lab_control_points/: README.md  brg_spiral.json  licorice.json  mcyk.json  plasmoid.json  rbg_spiral.json  rbg_spiral2.json  spectrum.json  viridish.json  viridish_2.json
perfect_cmaps/: __init__.py  color_utils.py  colormaps.py  create_cielab_gamut.py  customize_cmap.py  storage.py  transform.py
perfect_cmaps/data/: cielab_gamut_max_L.npy  cielab_gamut_max_L_RGB.npy
perfect_cmaps/lab_control_points/: cividish.json  diverging_hot_cool.json  rgb_test.json  rgb_test2.json
test_images/: README.md
