[bumpversion]
current_version = 1.0.5
commit = true
tag = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"perfect_cmaps" = ["data/*", "test_images/*", "lab_control_points/*"]

[bumpversion:file:perfect_cmaps/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:CITATION.cff]
search = version: {current_version}
replace = version: {new_version}
